--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
-    "turbo": "^2.6.1",
-    "typescript": "5.9.2"
+    "prettier": "3.6.2",
+    "turbo": "2.6.1",
+    "typescript": "5.9.3"
   },
   "engines": {
-    "node": ">=18"
+    "bun": ">=1.3.2"
   },
   "packageManager": "bun@1.3.2",
   "workspaces": [
