--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
+  "sideEffects": false,
   "private": true,
   "exports": {
     "./*": "./src/*.tsx"
