--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "e2e:test": {
-      "dependsOn": ["^build"]
+      "dependsOn": [],
+      "inputs": ["src/**", "package.json", "build.hash"]
     },
     "lint": {
       "dependsOn": ["^lint"]
