--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,8 @@
   "sideEffects": false,
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./*": "./src/*.tsx",
+    "./utils/*": "./src/utils/*.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
