--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
+  "sideEffects": false,
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./*": "./src/*.tsx",
+    "./utils": "./src/utils/index.ts",
+    "./utils/*": "./src/utils/*.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
