--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,17 +12,25 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/bun": "1.3.2",
     "@types/react": "19.2.6",
     "@types/react-dom": "19.2.3",
+    "autoprefixer": "^10.4.22",
     "eslint": "9.39.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "5.9.3"
   }
 }
