--- a/packages/web-e2e/package.json
+++ b/packages/web-e2e/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "e2e:test": "echo \"test web\""
+    "e2e:test": "playwright test",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:report": "playwright show-report"
   },
   "dependencies": {
     "@playwright/test": "1.56.1",
