Add logs surpress

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "turbo-2",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
+    "build": "turbo run build --output-logs=new-only",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "e2e:test": "turbo run build && bun scripts/hash-build.ts && turbo run e2e:test",
+    "e2e:test": "turbo run build --output-logs=new-only && bun scripts/hash-build.ts && turbo run e2e:test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
