--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "prettier": "3.6.2",
     "turbo": "2.6.1",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "@types/bun": "1.3.2"
   },
   "engines": {
     "bun": ">=1.3.2"
