--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,8 +16,9 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "@types/bun": "1.3.2",
-    "@types/react": "19.2.6",
+    "@types/bun": "1.3.3",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "eslint": "9.39.1",
     "typescript": "5.9.3"
@@ -25,6 +26,6 @@
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "sonner": "^2.0.7"
+    "sonner": "2.0.7"
   }
 }
