--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "prettier": "3.6.2",
     "turbo": "2.6.1",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "@types/bun": "1.3.3",
+    "@types/node": "24.10.1"
   },
   "engines": {
     "bun": ">=1.3.2"
   },
-  "packageManager": "bun@1.3.2",
+  "packageManager": "bun@1.3.3",
   "workspaces": [
     "apps/*",
     "packages/*"
