--- a/packages/docs-e2e/package.json
+++ b/packages/docs-e2e/package.json
@@ -9,9 +9,12 @@
     "test:report": "playwright show-report"
   },
   "dependencies": {
-    "@playwright/test": "1.56.1",
+    "@playwright/test": "1.57.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "docs": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/bun": "1.3.3"
   }
 }
