--- a/turbo.json
+++ b/turbo.json
@@ -5,8 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["NODE_ENV", "NEXT_PUBLIC_*"]
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "e2e:test": {
       "dependsOn": [],
@@ -22,6 +21,5 @@
       "cache": false,
       "persistent": true
     }
-  },
-  "globalPassThroughEnv": ["VERCEL", "VERCEL_ENV", "VERCEL_URL", "VERCEL_GIT_*"]
+  }
 }
